# final-round

./: .gitignore  CMakeLists.txt  README.md  README.txt  TODO.txt  config.toml  default_punches.toml  final-round.6.scd  final-round.cfg  fr.cfg  fr.toml  meson.build
assets/: meson.build
licenses/: tux
src/: animation.cpp  animation.hpp  animations.hpp  character.cpp  character.hpp  config.cpp  config.hpp  direction.hpp  dodge.cpp  dodge.hpp  guard.hpp  health.cpp  health.hpp  health_bar.cpp  health_bar.hpp  input.cpp  input.hpp  input_manager.cpp  input_manager.hpp  level.cpp  level.hpp  main.cpp  main.hpp  match.cpp  match.hpp  meson.build  movement.hpp  physics.cpp  physics.hpp  player.cpp  player.hpp  punch.cpp  punch.hpp  sounds.hpp  sprite.cpp  sprite.hpp  state.cpp  state.hpp  stats.cpp  stats.hpp  (+3 more)
