assets = files(
	'blue_l_spritesheet.png',
	'blue_r_spritesheet.png',
	'dodge.ogg',
	'hit.ogg',
	'jab.ogg',
	'ko.ogg',
	'left_nostar.png',
	'left_star.png',
	'logo.png',
	'nostar.png',
	'placeholder.png',
	'power.ogg',
	'red_l_spritesheet.png',
	'red_r_spritesheet.png',
	'right_nostar.png',
	'right_star.png',
	'ring.png',
	'star.png',
	'step.ogg',
	'ui_move.ogg',
	'unscii-8.pcf',
	'unscii-8-thin.pcf',
)
