assets = files(
	'blue_left_spritesheet.png',
	'blue_right_spritesheet.png',
	'dodge.ogg',
	'hit.ogg',
	'jab.ogg',
	'ko.ogg',
	'left_nostar.png',
	'left_star.png',
	'logo.png',
	'nostar.png',
	'placeholder.png',
	'power.ogg',
	'red_left_spritesheet.png',
	'red_right_spritesheet.png',
	'right_nostar.png',
	'right_star.png',
	'ring.png',
	'star.png',
	'step.ogg',
	'ui_move.ogg',
	'unscii-8.pcf',
	'unscii-8-thin.pcf',
)
